; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_git_path_check_ident.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_git_path_check_ident.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_check_item = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.attr_check_item*)* @git_path_check_ident to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @git_path_check_ident(%struct.attr_check_item* %0) #0 {
  %2 = alloca %struct.attr_check_item*, align 8
  %3 = alloca i8*, align 8
  store %struct.attr_check_item* %0, %struct.attr_check_item** %2, align 8
  %4 = load %struct.attr_check_item*, %struct.attr_check_item** %2, align 8
  %5 = getelementptr inbounds %struct.attr_check_item, %struct.attr_check_item* %4, i32 0, i32 0
  %6 = load i8*, i8** %5, align 8
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @ATTR_TRUE(i8* %7)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i32 @ATTR_TRUE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
